tests/src/frontend/typechecking/exhaustiveness/invalid/exhaustive_pattern7.sk
fun matcher(value: Bool): Int {
  value match {
  | true -> 42
  | false -> 101
  | _ ->
    43 // pattern already exhausted before this case
  }
}
